Attempt to fix rendering bug with scrollbars
Scrollbars were rendering to old window size on different tabs for Brad with display: none.  This change has the same CPU benefit as display: none and I think it'll work better for Brad.

Auditors: @diracdeltas

--- a/less/window.less
+++ b/less/window.less
@@ -124,7 +124,7 @@ html,
     // in the background.  This also has a major benefit for background
     // tabs that have video and animations in them.
     &:not(.isPreview) {
-      display: none;
+      visibility: hidden;
     }
   }
 }
